fixed h3 on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,7 +247,7 @@ footer {
   .homepageHero {
     padding-bottom: 5px;
   }
-  h3 {
+  .greeting {
     display: none;
   }
   .workTog {
